# robots_app

./: .gitignore  CMakeLists.txt  CMakeListsDocker.txt  EDU2.files  EDU2.includes  config_pdo_rc_fsr.sh  robots_app.creator.user.874abfc
HexPlanner/: .gitignore  CMakeLists.txt  Dynamics.cpp  Dynamics.h  DynamicsBase.cpp  DynamicsBase.h  DynamicsModelBase.cpp  DynamicsModelBase.h  Planner.cpp  Planner.h  data.txt  ldl.cpp  main.cpp  matrix_support.cpp  solver.cpp  solver.h  util.cpp
Server/: GoStair.cpp  GoStair.h  RobotEDU2.xml  main.cpp
ServerIII/: CMakeLists.txt  Communication.cpp  Communication.h  Compatible.h  CrowdPassingPlanner.cpp  CrowdPassingPlanner.h  Filter.h  Gait.cpp  Gait.h  Line.cpp  Line.h  LowpassFilter.h  Motions.cpp  Motions.h  MoveCrowdPassingGait.cpp  MoveCrowdPassingGait.h  MovePushDoorSimple.cpp  MovePushDoorSimple.h  PushDoorSimple.cpp  PushDoorSimple.h  StaMach.cpp  StaMach.h  continuous_move.cpp  continuous_move.h  continuous_walk_with_force.cpp  continuous_walk_with_force.h  interpolation.cpp  interpolation.h  log.h  log_data.h  main.cpp  peg_in_hole.cpp  peg_in_hole.h  push_recovery.cpp  push_recovery.h  rofo2.cpp  rofo2.h  say_hello.cpp  say_hello.h  swing.cpp  (+3 more)
ServerXIII/: CMakeLists.txt  Calibration.cpp  Calibration.h  ForceGait.cpp  ForceGait.h  ForceTest.cpp  PassStepDitch.cpp  PassStepDitch.h  Robot_XIII.xml  cross_obstacle.cpp  cross_obstacle.h  main.cpp  say_hello.cpp  say_hello.h  swing.cpp  swing.h  twist_waist.cpp  twist_waist.h
ServerXV/: ForceTest.cpp  ForceTest.h  Gait.cpp  Gait.h  GoStair.cpp  GoStair.h  Log.cpp  Log.h  (+2 more)
(+14 files in other folders)
